# distributed_tools

./: Cargo.toml  README.md
.github/workflows/: run-tests.yml  run-weekly-tests.yml  style-checks.yml
examples/: data_mapper.rs  ghost_communicator.rs  map_index_layout.rs  permutation.rs
src/: array_tools.rs  data_mapper.rs  ghost_communicator.rs  index_embedding.rs  index_layout.rs  lib.rs  permutation.rs
src/index_layout/: default_distributed_index_layout.rs  equidistributed_index_layout.rs  index_layout_from_local_counts.rs  single_process_index_layout.rs
