[features]
strict = []

[package]
name = "bempp-ghost"
version = "0.1.0-dev"
edition = "2021"
authors = [
    "Timo Betcke <timo.betcke@gmail.com>",
    "Matthew Scroggs <rust@mscroggs.co.uk>",
]
description = "Ghost communicator for MPI."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/ghost"
repository = "https://github.com/bempp/ghost"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "bempp_ghost"
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
mpi = { version = "0.8.*" }
mpi-sys = "0.2"

[lints.clippy]
wildcard_imports = "forbid"
